h1改行フレキシブル対応へ

--- a/index.html
+++ b/index.html
@@ -96,7 +96,8 @@
         <!-- Hero Section -->
         <section id="hero" class="h-screen flex flex-col items-center justify-center text-center p-4">
             <h1 class="text-4xl md:text-6xl font-bold font-noto tracking-tight leading-tight">
-                <span class="gradient-text">2025年 夏至点</span><br>宇宙と繋がる、誓いの日
+                <span class="gradient-text">2025年 夏至点</span>
+                <span class="block md:inline">宇宙と繋がる、誓いの日</span>
             </h1>
             <p class="mt-4 text-lg md:text-xl max-w-2xl mx-auto text-gray-300">
                 数十年に一度の宇宙的特異点。<br>自らの手で、人生の流れを創造する瞬間が、今ここに。
