フレキシブル改行3

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <h1 class="text-4xl md:text-6xl font-bold font-noto tracking-tight leading-tight" style="word-break: keep-all;">
                 <span class="gradient-text">2025年 夏至点</span><br>宇宙と繋がる、誓いの日
             </h1>
-            <p class="mt-4 text-lg md:text-xl max-w-2xl mx-auto text-gray-300">
+            <p class="mt-4 text-lg md:text-xl max-w-2xl mx-auto text-gray-300" style="word-break: keep-all;">
                 数十年に一度の宇宙的特異点。<br>自らの手で、人生の流れを創造する瞬間が、今ここに。
             </p>
             <div id="countdown" class="mt-8 text-3xl md:text-5xl font-bold tracking-wider flex space-x-2 md:space-x-4">
