thumnail表示のためのドメイン差し替え

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://your-domain.com/ukehi/">
+    <meta property="og:url" content="https://hiroshift.github.io/ukehi/">
     <meta property="og:title" content="2025年 夏至点 | ウケヒ宣言">
     <meta property="og:description" content="数十年に一度の宇宙的特異点。自らの手で、人生の流れを創造する瞬間が、今ここに。">
-    <meta property="og:image" content="https://your-domain.com/ukehi/images/thumbnail.png">
+    <meta property="og:image" content="https://hiroshift.github.io/ukehi/images/thumbnail.png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:locale" content="ja_JP">
