thumnail表示のためのドメイン差し替え追加

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://your-domain.com/ukehi/">
+    <meta property="twitter:url" content="https://hiroshift.github.io/ukehi/">
     <meta property="twitter:title" content="2025年 夏至点 | ウケヒ宣言">
     <meta property="twitter:description" content="数十年に一度の宇宙的特異点。自らの手で、人生の流れを創造する瞬間が、今ここに。">
-    <meta property="twitter:image" content="https://your-domain.com/ukehi/images/thumbnail.png">
+    <meta property="twitter:image" content="https://hiroshift.github.io/ukehi/images/thumbnail.png">
     
     <!-- Additional Meta Tags -->
     <meta name="description" content="数十年に一度の宇宙的特異点。自らの手で、人生の流れを創造する瞬間が、今ここに。2025年6月21日、日本標準時11時42分の夏至点に合わせて、あなたの誓いを宇宙に宣言しましょう。">
