--- a/index.html
+++ b/index.html
@@ -181,9 +181,9 @@
                         <h3 class="text-xl font-bold text-yellow-300 font-noto">ステップ2：誓いを立てる</h3>
                         <p class="mt-2 text-gray-400">2025年12月22日(冬至)までに達成したい、本気の目標を「数値・期限付き」で3つ、ここに記してください。</p>
                         <div class="mt-4 space-y-4">
-                            <input type="text" id="vow1" class="w-full p-3 rounded-lg ukehi-input" placeholder="例：副業で月収20万円を6ヶ月継続する">
-                            <input type="text" id="vow2" class="w-full p-3 rounded-lg ukehi-input" placeholder="例：AIの新スキルを1つ習得し、独立の第一歩を踏み出す">
-                            <input type="text" id="vow3" class="w-full p-3 rounded-lg ukehi-input" placeholder="例：週3回の筋トレを継続し、理想の体型になる">
+                            <input type="text" id="vow1" class="w-full p-3 rounded-lg ukehi-input" placeholder="例：学びたかった分野のオンライン講座を受講する">
+                            <input type="text" id="vow2" class="w-full p-3 rounded-lg ukehi-input" placeholder="例：心と体の健康のため、新しい良い習慣を３つ定着させる">
+                            <input type="text" id="vow3" class="w-full p-3 rounded-lg ukehi-input" placeholder="例：専門性を高め、自分の強みと言える実績を新たに1つ作る">
                         </div>
                     </div>
                      <div>
